--- a/task1/practice.ipynb
+++ b/task1/practice.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 1\n",
+    "### Firstly, import necessary libraries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -11,7 +19,14 @@
     "import Crypto.Cipher.AES as AES\n",
     "%matplotlib inline\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = [12, 10]"
+    "plt.rcParams['figure.figsize'] = [12, 10]   # size of matplotlib windows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Declare some global variables."
    ]
   },
   {
@@ -20,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# subtitution box for AES-128\n",
     "Sbox = (0x63, 0x7c, 0x77, 0x7b, 0xf2, 0x6b, 0x6f, 0xc5, 0x30, 0x01, 0x67, 0x2b, 0xfe, 0xd7, 0xab, 0x76,\n",
     "        0xca, 0x82, 0xc9, 0x7d, 0xfa, 0x59, 0x47, 0xf0, 0xad, 0xd4, 0xa2, 0xaf, 0x9c, 0xa4, 0x72, 0xc0,\n",
     "        0xb7, 0xfd, 0x93, 0x26, 0x36, 0x3f, 0xf7, 0xcc, 0x34, 0xa5, 0xe5, 0xf1, 0x71, 0xd8, 0x31, 0x15,\n",
@@ -37,8 +53,15 @@
     "        0xe1, 0xf8, 0x98, 0x11, 0x69, 0xd9, 0x8e, 0x94, 0x9b, 0x1e, 0x87, 0xe9, 0xce, 0x55, 0x28, 0xdf,\n",
     "        0x8c, 0xa1, 0x89, 0x0d, 0xbf, 0xe6, 0x42, 0x68, 0x41, 0x99, 0x2d, 0x0f, 0xb0, 0x54, 0xbb, 0x16)\n",
     "\n",
-    "\n",
+    "# array of values of hamming_weight function for bytes from 0 to 255\n",
     "hamming_weight = [bin(n).count(\"1\") for n in range(0, 256)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2 necessary functions."
    ]
   },
   {
@@ -48,25 +71,46 @@
    "outputs": [],
    "source": [
     "def cor(x, y):\n",
-    "    meanX = np.mean(x)\n",
+    "    \"\"\" Absolute value of Pearson Correlation Coefficient for 2 sets\n",
+    "    \n",
+    "    :param x: numpy array of values\n",
+    "    :param y: numpy array of values\n",
+    "    :return: float number from 0 to 1\n",
+    "    \"\"\"\n",
+    "    meanX = np.mean(x)             # average values\n",
     "    meanY = np.mean(y)\n",
-    "    x = x - meanX\n",
+    "    x = x - meanX                  # average differences\n",
     "    y = y - meanY\n",
-    "    cov = sum(x*y)\n",
-    "    meanQuadraticX = sum(x ** 2)\n",
+    "    cov = sum(x*y)      \n",
+    "    meanQuadraticX = sum(x ** 2)   # average quadratic differences\n",
     "    meanQuadraticY = sum(y ** 2)\n",
     "\n",
-    "    res = cov / np.sqrt(meanQuadraticX * meanQuadraticY)\n",
+    "    res = cov / np.sqrt(meanQuadraticX * meanQuadraticY)   \n",
     "    return abs(res)\n",
     "\n",
     "\n",
     "def cross_all_bytes(texts_in, byte_num, n):\n",
+    "    \"\"\" Byte search funtion. \n",
+    "    For each byte from 0 to 255 builds array of leakages for all traces in the context of \n",
+    "    our math model\n",
+    "    \n",
+    "    :param texts_in: numpy array of plaintexts\n",
+    "    :param byte_num: a number of the byte we search\n",
+    "    :return: supposed byte (int number), array of leakages\n",
+    "    \"\"\"\n",
     "    for hyp in range(256):\n",
     "        leak_array = np.zeros(n)\n",
-    "        for _i in range(n):\n",
-    "            # leak_array[_i] = hamming_weight(Sbox[texts_in[_i][byte_num]] ^ hyp)\n",
+    "        for _i in range(n):                     \n",
+    "            # leakage is the hamming weight of processed byte\n",
     "            leak_array[_i] = hamming_weight[Sbox[texts_in[_i][byte_num] ^ hyp]]\n",
     "        yield hyp, leak_array\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now we read all the data from input files and plot the first trace for test."
    ]
   },
   {
@@ -86,16 +130,23 @@
     }
    ],
    "source": [
-    "textIn = np.load('/files/univer/samsung/task1/textin.npy')\n",
-    "textOut = np.load('/files/univer/samsung/task1/textout.npy')\n",
-    "traces = np.load('/files/univer/samsung/task1/traces.npy')\n",
+    "textIn = np.load('textin.npy')\n",
+    "textOut = np.load('textout.npy')\n",
+    "traces = np.load('traces.npy')\n",
     "\n",
     "traces_amount = len(traces)\n",
     "meas_amount = len(traces[0])\n",
-    "tmp_traces = np.transpose(traces)\n",
+    "tmp_traces = np.transpose(traces)    # addition transposed array of traces\n",
     "\n",
     "plt.plot(traces[0], linewidth=0.2)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The main piece of the program -  key picking."
    ]
   },
   {
@@ -107,126 +158,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\nbyte number: 0\nbest byte: 78\nmax correlation: 0.8953794890873036\nleak place: 954\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 1\nbest byte: 48\nmax correlation: 0.8427208645460492\nleak place: 1129\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 2\nbest byte: 95\nmax correlation: 0.8946907405896911\nleak place: 1306\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 3\nbest byte: 71\nmax correlation: 0.8577883781361959\nleak place: 1482\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 4\nbest byte: 117\nmax correlation: 0.8863006067346022\nleak place: 994\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 5\nbest byte: 84\nmax correlation: 0.8739318435218355\nleak place: 1686\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 6\nbest byte: 53\nmax correlation: 0.908848473689249\nleak place: 1346\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 7\nbest byte: 95\nmax correlation: 0.8717569873660621\nleak place: 1521\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 8\nbest byte: 78\nmax correlation: 0.8634420818386443\nleak place: 1033\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 9\nbest byte: 111\nmax correlation: 0.8334658333639947\nleak place: 1210\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 10\nbest byte: 95\nmax correlation: 0.8997472281810905\nleak place: 1386\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 11\nbest byte: 83\nmax correlation: 0.8869495128518333\nleak place: 1562\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 12\nbest byte: 55\nmax correlation: 0.8721343341222365\nleak place: 1074\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 13\nbest byte: 48\nmax correlation: 0.8692334780420078\nleak place: 1250\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 14\nbest byte: 82\nmax correlation: 0.8269626619596463\nleak place: 1426\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\nbyte number: 15\nbest byte: 89\nmax correlation: 0.8135430357290349\nleak place: 1752\n"
+      "\n",
+      "byte number: 0\n",
+      "best byte: 78\n",
+      "max correlation: 0.8953794890873036\n",
+      "leak place: 954\n",
+      "\n",
+      "byte number: 1\n",
+      "best byte: 48\n",
+      "max correlation: 0.8427208645460492\n",
+      "leak place: 1129\n",
+      "\n",
+      "byte number: 2\n",
+      "best byte: 95\n",
+      "max correlation: 0.8946907405896911\n",
+      "leak place: 1306\n",
+      "\n",
+      "byte number: 3\n",
+      "best byte: 71\n",
+      "max correlation: 0.8577883781361959\n",
+      "leak place: 1482\n",
+      "\n",
+      "byte number: 4\n",
+      "best byte: 117\n",
+      "max correlation: 0.8863006067346022\n",
+      "leak place: 994\n",
+      "\n",
+      "byte number: 5\n",
+      "best byte: 84\n",
+      "max correlation: 0.8739318435218355\n",
+      "leak place: 1686\n",
+      "\n",
+      "byte number: 6\n",
+      "best byte: 53\n",
+      "max correlation: 0.908848473689249\n",
+      "leak place: 1346\n",
+      "\n",
+      "byte number: 7\n",
+      "best byte: 95\n",
+      "max correlation: 0.8717569873660621\n",
+      "leak place: 1521\n",
+      "\n",
+      "byte number: 8\n",
+      "best byte: 78\n",
+      "max correlation: 0.8634420818386443\n",
+      "leak place: 1033\n",
+      "\n",
+      "byte number: 9\n",
+      "best byte: 111\n",
+      "max correlation: 0.8334658333639947\n",
+      "leak place: 1210\n",
+      "\n",
+      "byte number: 10\n",
+      "best byte: 95\n",
+      "max correlation: 0.8997472281810905\n",
+      "leak place: 1386\n",
+      "\n",
+      "byte number: 11\n",
+      "best byte: 83\n",
+      "max correlation: 0.8869495128518333\n",
+      "leak place: 1562\n",
+      "\n",
+      "byte number: 12\n",
+      "best byte: 55\n",
+      "max correlation: 0.8721343341222365\n",
+      "leak place: 1074\n",
+      "\n",
+      "byte number: 13\n",
+      "best byte: 48\n",
+      "max correlation: 0.8692334780420078\n",
+      "leak place: 1250\n",
+      "\n",
+      "byte number: 14\n",
+      "best byte: 82\n",
+      "max correlation: 0.8269626619596463\n",
+      "leak place: 1426\n",
+      "\n",
+      "byte number: 15\n",
+      "best byte: 89\n",
+      "max correlation: 0.8135430357290349\n",
+      "leak place: 1752\n"
      ]
     }
    ],
    "source": [
-    "key = []\n",
+    "key = []              # array of the best bytes (it's byte with the most correlation coefficient)\n",
+    "leak_places = []      # array of the places on a traces, where we found the best bytes\n",
     "\n",
-    "leak_places = []\n",
     "for k in range(16):\n",
-    "    max_cor = 0\n",
-    "    best_byte = 0\n",
-    "    leak_place = 0\n",
+    "    max_cor = 0       # max correlation for each byte\n",
+    "    best_byte = 0     # value of the best byte\n",
+    "    leak_place = 0    # place on a trace (moment of time)\n",
     "    for byte, leak in cross_all_bytes(textIn, k, traces_amount):\n",
     "        for i in range(meas_amount):\n",
-    "            real_values = tmp_traces[i]\n",
+    "            real_values = tmp_traces[i]         # real values of the power consumtion in the moment of time\n",
     "            tmp_cor = cor(leak, real_values)\n",
     "            # print(tmp_cor, cor2(leak, real_values))\n",
     "            if tmp_cor > max_cor:\n",
@@ -244,21 +269,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "key:  b'N0_GuT5_No_S70RY'\nleak places: [954, 1129, 1306, 1482, 994, 1686, 1346, 1521, 1033, 1210, 1386, 1562, 1074, 1250, 1426, 1752]\n"
+      "key:  b'N0_GuT5_No_S70RY'\n",
+      "leak places: [954, 1129, 1306, 1482, 994, 1686, 1346, 1521, 1033, 1210, 1386, 1562, 1074, 1250, 1426, 1752]\n"
      ]
     }
    ],
    "source": [
-    "print('key: ', bytes(key))\n",
-    "print('leak places:', leak_places)\n"
+    "print('key: ', bytes(key)) \n",
+    "print('leakage places:', leak_places)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check the correctness of an answer encrypting input text manually"
    ]
   },
   {
@@ -270,15 +310,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "plaintext: [156 135   7 127 141 111 213 234 169 189 200 111 126 215 234 164]\nciphertext in files:        b'\\xb3e<\\x05i\\xec\\xb1\\x8a\\x83\\xc8\\x91\\n\\xcax%R'\nciphertext using found key: b'\\xb3e<\\x05i\\xec\\xb1\\x8a\\x83\\xc8\\x91\\n\\xcax%R'\n"
+      "plaintext: [156 135   7 127 141 111 213 234 169 189 200 111 126 215 234 164]\n",
+      "ciphertext in files:        b'\\xb3e<\\x05i\\xec\\xb1\\x8a\\x83\\xc8\\x91\\n\\xcax%R'\n",
+      "ciphertext using found key: b'\\xb3e<\\x05i\\xec\\xb1\\x8a\\x83\\xc8\\x91\\n\\xcax%R'\n"
      ]
     }
    ],
    "source": [
-    "test_cipher = AES.new(bytes(key), AES.MODE_ECB)\n",
+    "test_cipher = AES.new(bytes(key), AES.MODE_ECB)      # mode for AES - electronic codebook\n",
     "print('plaintext:', textIn[0])\n",
     "print('ciphertext in files:       ', bytes(list(textOut[0])))\n",
     "print('ciphertext using found key:', test_cipher.encrypt(bytes(list(textIn[0]))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting the traces highlighting the leakages"
    ]
   },
   {
@@ -328,20 +377,19 @@
     }
    ],
    "source": [
-    "styles = ['r', 'b', 'g', 'm']\n",
+    "colors = ['r', 'b', 'g', 'm']    # colors of highlights\n",
     "j = 0\n",
     "plt.plot(np.array(range(5000)), traces[0], '--', linewidth=0.1, label='trace 0')\n",
     "for i in range(16):\n",
-    "    if j == 4:\n",
+    "    if j == 4:                   # we allocate 4 leakages on the one graph in order to avoid overlaps \n",
     "        plt.legend(loc='best')\n",
     "        plt.show()\n",
     "        plt.plot(np.array(range(5000)), traces[0], '--', linewidth=0.1, label='trace 0')\n",
     "        j = 0\n",
     "    plt.plot(np.array(range(leak_places[i]-10, leak_places[i]+10)), \n",
-    "             traces[0, leak_places[i]-10:leak_places[i]+10], styles[j], \n",
+    "             traces[0, leak_places[i]-10:leak_places[i]+10], colors[j], \n",
     "             linewidth=0.3, label=f'leakage of byte {i}')\n",
-    "    j += 1\n",
-    "    "
+    "    j += 1        "
    ]
   }
  ],
